hphp/test/slow/parser/php-namespace-conflict-4.php.expectf
Fatal error: Cannot declare class Blah\string because the name was explicitly used earlier via a `use' statement on line 3 in %s/test/slow/parser/php-namespace-conflict-4.php on line 4